--- a/index.html
+++ b/index.html
@@ -109,12 +109,15 @@
                     <ul class="works-list list">
                         <li class="works-item">
                             <img src="./images/work1.jpg" alt="Человека набирает html код страницы" width="370">
+                            <p class="works-description">Десктопные приложения</p>
                         </li>
                         <li class="works-item">
                             <img src="./images/work2.jpg" alt="Человек адаптирует вид страницы ноутбука на мобильный телефон" width="370">
+                            <p class="works-description">Мобильные приложения</p>
                         </li>
                         <li class="works-item">
                             <img src="./images/work3.jpg" alt="Человека выбирает градиент цветов на планшете" width="370">
+                            <p class="works-description">Дизайнерские решения</p>
                         </li>
                     </ul>
                 </div>
