добавляет класс хедера для корректной стилизации

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- шапка страницы -->
-    <header class="header">
+    <header class="header portfolio">
         <div class="container">
             <nav class="nav">
                 <a class="logo" lang="en" href="./index.html"> Web<span class="logo-black">Studio</span></a>
